@@ -24,6 +24,7 @@
 (import 'compiler::%optimize-function-lambda)
 
 (defpackage "CLOS"
+  (:documentation "http://www.lisp.org/HyperSpec/Body/chap-7.html")
   (:import-from "EXT" ext:mapcap ext:proper-list-p)
   (:import-from "SYSTEM"
     ;; Import:
