@@ -49,7 +49,7 @@
     (getf (gethash x sys::*documentation*) 'standard-method))
   (:method ((x package) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (getf (gethash x sys::*documentation*) 'package))
+    (sys::package-documentation x))
   (:method ((x standard-class) (doc-type (eql 't)))
     (declare (ignore doc-type))
     (class-documentation x))
@@ -132,7 +132,7 @@
     (sys::%set-documentation x 'standard-method new-value))
   (:method (new-value (x package) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (sys::%set-documentation x 'package new-value))
+    (setf (sys::package-documentation x) new-value))
   (:method (new-value (x standard-class) (doc-type (eql 't)))
     (declare (ignore doc-type))
     (setf (class-documentation x) new-value))
